--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head><meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>notebook</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>index</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <style type="text/css">
     pre { line-height: 125%; }
 td.linenos .normal { color: inherit; background-color: transparent; padding-left: 5px; padding-right: 5px; }
@@ -7521,7 +7521,7 @@ a.anchor-link {
 <h3 id="Contributions:">Contributions:<a class="anchor-link" href="#Contributions:">¶</a></h3><p>Kai: Contributed to the Project Idea, Dataset Preprocessing, Summary Statistics, and ML Algorithm Training. Contributed to the data preprocessing by using one-hot encoding to convert all string features so that the data can be used for machine learning procedures, the summary statistic that used an ANOVA test, and the ML algorithm training using the KNN classifier and PCA.</p>
 <p>Josiah: Found the heart attack dataset for section A, removed NULLs and converted one version of the dataframe to have True/False values from the corresponding 0/1 values, conducted a two sample hypothesis test for section C, contributed to the discussion on the ML algorithm design and development for section D, plotted the output for KNN, PCA, and RandomForest results while explaining the plots and wrote the conclusion for section F, formatted the final tutorial report and wrote comments for most of the sections on the report for section G.</p>
 <p>Nathaniel: Wrote a hypothesis test for section C.</p>
-<p>Joseph: Fixed up a lot of the PCA and K means, did random forrest, debugged code</p>
+<p>Joseph: Contributed to doing most of the PCA &amp; K means &amp; random forest. plotted out total cumulative variance graph and visualized PCA clustering. Trained random forrest ml model. Debugged code, making sure that there were no mathematical errors within code. Contributed to comments about work done as well as conclustion. Additionally did the chi square data exploration.</p>
 </div>
 </div>
 </div>
@@ -9535,7 +9535,7 @@ Standard deviation: 0.002041635027531844
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<p>There seems to be a relatively clean split off of the 1st Principal Component.</p>
+<p>There seems to be a relatively clean split off of the first two components. Not particularly good as this means that the k means are not mostly clustering on only these two PCs and not learning much of the overall shape of the data.</p>
 </div>
 </div>
 </div>
@@ -11543,6 +11543,7 @@ Standard deviation: 0.002041635027531844
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
 <p>Below we are one hot encoding the cluster before adding it to the dataset. One hot encoding is not as neccesary now because there are only 2 clusters but previously we had more clusters and such code was necessary to not have the model analyze the cluster number as ordinal data. (one hot encoding adds an extra feature now which might makes things harder to learn for the model but is also fancier)</p>
+<p>Though the k means doesnt seem to have learned much that was already known, we are still including it anyways just in case.</p>
 </div>
 </div>
 </div>
@@ -11763,8 +11764,8 @@ weighted avg       0.50      0.50      0.50     74595
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h2 id="Insights-and-Conclusions">Insights and Conclusions<a class="anchor-link" href="#Insights-and-Conclusions">¶</a></h2><p>After our team's analysis, we have found that it is very difficult to predict whether someone has a heart attack or not from a wide range of features such as health features like blood pressure and heart rate and also other types of features such as specific demographics of a person and lifestyle choices of a person. Even with features such as blood pressure and heart rate which can be thought of as potential indicators for a heart attack, our team still found it difficult in order to predict a heart attack or not. This project can show the reality of the really difficult task of predicting whether someone has a heart attack or not.</p>
-<p>There could also be the case where our team used way too many features in different categories of the type of features like using health and demographics features combined. This could have led to not the most accurate results for determining if a person has a heart attack or not. Possibly reframing the question that our team was trying to solve to be more specfic for specfic features of the dataset could have produced more accurate final results.</p>
+<h2 id="Insights-and-Conclusions">Insights and Conclusions<a class="anchor-link" href="#Insights-and-Conclusions">¶</a></h2><p>After our team's analysis, we have found that it is very difficult to predict whether someone has a heart attack or not from a wide range of features such as health features like blood pressure and heart rate and also other types of features such as specific demographics of a person and lifestyle choices of a person. Even with features such as blood pressure and heart rate which can be thought of as potential indicators for a heart attack, our team still found it difficult to predict heart attacks. Neither KNN or random forest were able to have meaningful accuracy, and PCA analysis + clustering also did not seemt to be able to pick up on any interesting features from the dataset. This project can show the reality of the really difficult task of predicting whether someone has a heart attack or not. Perhaps there could have been higher accuracy with more complex ml models such as transformers and more data analysis with other dimensionality reduction techniques such as UMAP as well as more data, but those techniques are outside of the scope for this class and our dataset is only so big.</p>
+<p>There could also be the case where our team used way too many features in different categories of the type of features like using health and demographics features combined. This could have led to not the most accurate results for determining if a person has a heart attack or not. Possibly reframing the question that our team was trying to solve to be more specfic for specfic features of the dataset could have produced more accurate final results, though it would be relatiely unlikely with how the PCA results showed that there were no standout variables that contributed to particuarly large amounts of the total variance of the dataset, showing that the true complexity of predicting heart attacks.</p>
 </div>
 </div>
 </div>
